[package]
name = "bipartite"
version = "0.1.0"
edition = "2021"
description = "A library implementing algorithms finding large bipartite subgraphs."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"