[package]
name = "labisu"
version = "0.1.1"
edition = "2021"
description = "A library implementing algorithms finding large bipartite subgraphs."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
num_cpus = "1.13.1"
normalize_url = "0.2.0"